# sdlucid

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  README  acinclude.m4  autogen.sh  configure.in  sdlucid-config.in  sdlucid.lsm.in  sdlucid.m4
examples/: Makefile.am  README  example.cc  logo.xcf  refpoint.cc  refpoint.hh  tahoma.fnt  vgademo.mod
src/: Makefile.am  audio.cc  base.cc  instance.cc  iostream_rwops.cc  mikmod_stream.cc  png.cc  ripttf.cc  sdlucid_audio.hh  sdlucid_base.hh  sdlucid_instance.hh  sdlucid_iostream_rwops.hh  sdlucid_mikmod_stream.hh  sdlucid_png.hh  sdlucid_smpeg_stream.hh  sdlucid_threads.hh  sdlucid_video.hh  smpeg_stream.cc  threads.cc  video.cc
web/: index.html
