# -----------------------------------------------------------------------------
# Initialize everything
# -----------------------------------------------------------------------------

AC_PREREQ(2.50)
AC_INIT(src/base.cc)

major_version=0
minor_version=90
micro_version=0

BINARY_IFACE_VERSION=0
BINARY_REVISION=$minor_version
BINARY_AGE=0
AC_SUBST(BINARY_IFACE_VERSION)
AC_SUBST(BINARY_REVISION)
AC_SUBST(BINARY_AGE)

AM_INIT_AUTOMAKE(sdlucid,$major_version.$minor_version.$micro_version)

AC_CANONICAL_TARGET

AC_DEFINE_UNQUOTED(SDLUCID_MAJOR_VERSION,$major_version,[Major version.])
AC_DEFINE_UNQUOTED(SDLUCID_MINOR_VERSION,$minor_version,[Minor version.])
AC_DEFINE_UNQUOTED(SDLUCID_MICRO_VERSION,$micro_version,[Micro version.])

# -----------------------------------------------------------------------------
# Checks 
# -----------------------------------------------------------------------------

AM_PROG_LIBTOOL
AC_PROG_CC
AC_PROG_CXX

AM_PATH_SDL(1.2.0)
AM_PATH_IXLIB(0.96.1)
IX_PATH_LIBPNG
IX_PATH_FREETYPE
IX_PATH_LIBMIKMOD
AM_PATH_SMPEG(0.4.3,
  [present="yes"
  AC_DEFINE(SDLUCID_HAS_SMPEG,,[smpeg found?])],
  [present="no"])
AM_CONDITIONAL(HAVE_SMPEG,test "x$present" = "xyes")

# -----------------------------------------------------------------------------
# Output
# -----------------------------------------------------------------------------

AC_ARG_ENABLE(debug,
  [  --enable-debug          have debug info compiled in],
  AM_CXXFLAGS="-g -Wall"
  AC_DEFINE(SDLUCID_DEBUG,1,[Whether debug code should be compiled in.])
  AM_CFLAGS="-g")  

# preserve timestamps on install
INSTALL="$INSTALL -p"

AM_CONFIG_HEADER(sdlucid_config.hh)
AC_OUTPUT([Makefile src/Makefile examples/Makefile sdlucid-config sdlucid.lsm],
  [chmod a+x sdlucid-config])
